syntax = "proto3";
package anndb_pb;

message EmptyMessage {}